python/testData/inspections/PyUnresolvedReferencesInspection/unresolvedTopLevelInit.py
<error descr="Unresolved reference '__init__'">__init__</error>
